// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserJoinPageComponent > should snap if user is not logged in and has a valid url 1`] = `
<tm-user-join-page
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  hasJoined="false"
  isLoading="false"
  key={[Function String]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  userId=""
  validUrl={[Function Boolean]}
>
  <div>
    <div
      class="card bg-light mx-auto"
      style="max-width: 800px;"
    >
      <div
        class="card-header bg-warning"
      >
        <h1
          class="mb-0 h3"
        >
          Not signed in
        </h1>
      </div>
      <div
        class="card-body"
      >
        You are not signed in. Please sign in first.
      </div>
    </div>
  </div>
</tm-user-join-page>
`;

exports[`UserJoinPageComponent > should snap with default fields 1`] = `
<tm-user-join-page
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  hasJoined="false"
  isLoading={[Function Boolean]}
  key={[Function String]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  userId=""
  validUrl={[Function Boolean]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-user-join-page>
`;

exports[`UserJoinPageComponent > should snap with invalid course join link 1`] = `
<tm-user-join-page
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  hasJoined="false"
  isLoading="false"
  key={[Function String]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  userId={[Function String]}
  validUrl="false"
>
  <div>
    <div
      class="card bg-light mx-auto"
      style="max-width: 800px;"
    >
      <div
        class="card-header bg-warning"
      >
        <h1
          class="mb-0 h3"
        >
          Invalid course join link
        </h1>
      </div>
      <div
        class="card-body"
      >
         The course join link is invalid. You may have entered the URL incorrectly or the URL may correspond to a/an student that does not exist. 
      </div>
    </div>
  </div>
</tm-user-join-page>
`;

exports[`UserJoinPageComponent > should snap with valid course join link that has been used 1`] = `
<tm-user-join-page
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  hasJoined={[Function Boolean]}
  isLoading="false"
  key={[Function String]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  userId={[Function String]}
  validUrl={[Function Boolean]}
>
  <div>
    <div
      class="card bg-light mx-auto"
      style="max-width: 800px;"
    >
      <div
        class="card-header bg-warning"
      >
        <h1
          class="mb-0 h3"
        >
          Invalid course join link
        </h1>
      </div>
      <div
        class="card-body"
      >
        The course join link has been used and is no longer valid.
      </div>
    </div>
  </div>
</tm-user-join-page>
`;

exports[`UserJoinPageComponent > should snap with valid course join link that has not been used 1`] = `
<tm-user-join-page
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  hasJoined="false"
  isLoading="false"
  key={[Function String]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  userId={[Function String]}
  validUrl={[Function Boolean]}
>
  <div>
    <div
      class="card bg-light mx-auto"
      style="max-width: 800px;"
    >
      <div
        class="card-header bg-primary text-white"
      >
        <h1
          class="mb-0 h3"
        >
          Confirm your account
        </h1>
      </div>
      <div
        class="card-body"
      >
         You are currently signed in as 
        <strong
          id="user-id"
        >
          user
        </strong>
        . 
        <br />
        If this is not you, please sign out and sign in using your own account. 
        <br />
        If this is you, please confirm below to complete your registration.
        <br />
        <div
          class="text-center"
          style="margin-top: 20px;"
        >
          <button
            class="btn btn-success"
            id="btn-confirm"
          >
            Register for course
          </button>
        </div>
      </div>
    </div>
  </div>
</tm-user-join-page>
`;
